// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner UI snapshots renders error type and text 1`] = `
.emotion-0 {
  background: transparent;
  border: none;
  width: 100%;
  cursor: inherit;
  position: relative;
  margin: 0 auto 0.5rem;
  padding: 1rem;
  border-radius: 8px;
  background-color: #BD200F;
  box-shadow: 0px 8px 24px rgba(189, 32, 15, 0.05);
}

.emotion-0:focus {
  outline: none;
  box-shadow: 0px 0px 0px 2px #FFFFFF,0px 0px 0px 4px #332E54;
}

@media (min-width: 768px) {
  .emotion-0 {
    margin: 0 auto 1rem;
  }
}

.emotion-2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  color: #FFFFFF;
  font-size: 0.875rem;
}

.emotion-4 svg {
  height: 1rem;
  width: 1rem;
  fill: #FFFFFF;
}

.emotion-6 {
  display: block;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  color: #FFFFFF;
  -webkit-transition: color 350ms,-webkit-transform 350ms;
  transition: color 350ms,transform 350ms;
}

.emotion-7 {
  margin: -3px 0 0 1rem;
}

<button
  class="emotion-0 emotion-1"
  tabindex="-1"
>
  <div
    class="emotion-2 emotion-3"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <svg
        class="emotion-6"
        fill="#FFFFFF"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Error Icon
        </title>
        <path
          clip-rule="evenodd"
          d="M14.6 6.78981C13.99 3.60981 11.21 1.30981 7.98003 1.30981C7.55003 1.30981 7.12003 1.34981 6.70003 1.42981C4.93003 1.76981 3.40003 2.77982 2.39003 4.26982C1.38003 5.75982 1.01003 7.55982 1.35003 9.32982C1.96003 12.5098 4.74003 14.8098 7.97003 14.8098C8.40003 14.8098 8.83003 14.7698 9.25003 14.6898C11.02 14.3498 12.55 13.3398 13.56 11.8498C14.57 10.3598 14.94 8.55981 14.6 6.78981ZM6.46003 0.199814C6.97003 0.109814 7.48003 0.0598145 7.98003 0.0598145C11.74 0.0598145 15.09 2.71982 15.83 6.54982C16.66 10.8898 13.82 15.0798 9.48003 15.9098C8.97003 15.9998 8.46003 16.0498 7.96003 16.0498C4.20003 16.0498 0.840032 13.3898 0.110032 9.55981C-0.719968 5.21981 2.12003 1.02981 6.46003 0.199814ZM7.32002 4.10986H8.73002V9.36986H7.32002V4.10986ZM7.15002 10.9399C7.15002 10.4599 7.54002 10.0999 8.03002 10.0999C8.52002 10.0999 8.91002 10.4599 8.91002 10.9399C8.91002 11.4299 8.52002 11.7999 8.03002 11.7999C7.54002 11.7999 7.15002 11.4299 7.15002 10.9399Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="emotion-7 emotion-8"
    >
      Error banner
    </div>
  </div>
</button>
`;

exports[`Banner UI snapshots renders info type and text 1`] = `
.emotion-0 {
  background: transparent;
  border: none;
  width: 100%;
  cursor: inherit;
  position: relative;
  margin: 0 auto 0.5rem;
  padding: 1rem;
  border-radius: 8px;
  background-color: #332E54;
  box-shadow: 0px 8px 24px rgba(51, 46, 84, 0.05);
}

.emotion-0:focus {
  outline: none;
  box-shadow: 0px 0px 0px 2px #FFFFFF,0px 0px 0px 4px #332E54;
}

@media (min-width: 768px) {
  .emotion-0 {
    margin: 0 auto 1rem;
  }
}

.emotion-2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  color: #FFFFFF;
  font-size: 0.875rem;
}

.emotion-4 svg {
  height: 1rem;
  width: 1rem;
  fill: #FFFFFF;
}

.emotion-6 {
  display: block;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  color: #FFFFFF;
  -webkit-transition: color 350ms,-webkit-transform 350ms;
  transition: color 350ms,transform 350ms;
}

.emotion-7 {
  margin: -3px 0 0 1rem;
}

<button
  class="emotion-0 emotion-1"
  tabindex="-1"
>
  <div
    class="emotion-2 emotion-3"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <svg
        class="emotion-6"
        fill="#FFFFFF"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Info Icon
        </title>
        <path
          d="M7.52 2C8.07229 2 8.52 1.55228 8.52 1C8.52 0.447715 8.07229 0 7.52 0C6.96772 0 6.52 0.447715 6.52 1C6.52 1.55228 6.96772 2 7.52 2Z"
          fill="currentColor"
        />
        <path
          d="M8.55 14.73V5.82998V4.73998L6 4.72998V5.97998H7.3V14.73H6V15.98H9.85V14.73H8.55Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="emotion-7 emotion-8"
    >
      Default banner
    </div>
  </div>
</button>
`;

exports[`Banner UI snapshots renders success type and text 1`] = `
.emotion-0 {
  background: transparent;
  border: none;
  width: 100%;
  cursor: inherit;
  position: relative;
  margin: 0 auto 0.5rem;
  padding: 1rem;
  border-radius: 8px;
  background-color: #2B6E33;
  box-shadow: 0px 8px 24px rgba(43, 110, 51, 0.05);
}

.emotion-0:focus {
  outline: none;
  box-shadow: 0px 0px 0px 2px #FFFFFF,0px 0px 0px 4px #332E54;
}

@media (min-width: 768px) {
  .emotion-0 {
    margin: 0 auto 1rem;
  }
}

.emotion-2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  color: #FFFFFF;
  font-size: 0.875rem;
}

.emotion-4 svg {
  height: 1rem;
  width: 1rem;
  fill: #FFFFFF;
}

.emotion-6 {
  display: block;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  color: #FFFFFF;
  -webkit-transition: color 350ms,-webkit-transform 350ms;
  transition: color 350ms,transform 350ms;
}

.emotion-7 {
  margin: -3px 0 0 1rem;
}

<button
  class="emotion-0 emotion-1"
  tabindex="-1"
>
  <div
    class="emotion-2 emotion-3"
  >
    <div
      class="emotion-4 emotion-5"
    >
      <svg
        class="emotion-6"
        fill="#FFFFFF"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Checkmark Icon
        </title>
        <path
          d="M14.96 2L5.26 11.42L0.88 7.1L0 7.99L5.26 13.17L15.83 2.9L14.96 2Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      class="emotion-7 emotion-8"
    >
      Success Banner
    </div>
  </div>
</button>
`;
